# sotrace

./: pyproject.toml  test.dot
src/: sotrace.py
